--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,8 +54,8 @@ jobs:
     - name: "💪 Grant execute permission for gradlew"
       run: "chmod +x gradlew"
     - name: "💪 Set Gradle Plugin Plugin portal credentials"
-      run:
-      - echo gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} >> ~/.gradle/gradle.properties
-      - echo gradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} >> ~/.gradle/gradle.properties
+      run: |
+        echo gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} >> ~/.gradle/gradle.properties
+        echo gradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} >> ~/.gradle/gradle.properties
     - name: "🚀 Publish with Gradle"
       run: "./gradlew publishPlugins"
