--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,7 @@ jobs:
       run: "chmod +x gradlew"
     - name: "💪 Set Gradle Plugin Plugin portal credentials"
       run: |
+        mkdir -p ~/.gradle
         touch ~/.gradle/gradle.properties
         echo gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} >> ~/.gradle/gradle.properties
         echo gradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} >> ~/.gradle/gradle.properties
