--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   release:
     name: "🚀 Release"
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: "📥 Check-out"
       uses: actions/checkout@v2
@@ -43,7 +43,7 @@ jobs:
         prerelease: false
   publish-plugin:
     name: "🚀 Publish plugin"
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: "📥 Check-out"
       uses: actions/checkout@v2
