--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   build:
     name: "🏗️ Gradle build"
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: "📥 Check-out"
       uses: actions/checkout@v2
@@ -19,7 +19,7 @@ jobs:
       run: "./gradlew build"
   test:
     name: "✅ Gradle test"
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: "📥 Check-out"
       uses: actions/checkout@v2
