--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,37 +1,37 @@
-name: "Create release"
+name: Create release
 
 on:
   push:
     tags: # Push events to new versions, e.g., 1.0, 20.15.10
-    - "[0-9]+.[0-9]+"
-    - "[0-9]+.[0-9]+.[0-9]+"
-    - "[0-9]+.[0-9]+-*"
-    - "[0-9]+.[0-9]+.[0-9]+-*"
+    - '[0-9]+.[0-9]+'
+    - '[0-9]+.[0-9]+.[0-9]+'
+    - '[0-9]+.[0-9]+-*'
+    - '[0-9]+.[0-9]+.[0-9]+-*'
 
 jobs:
   release:
-    name: "🚀 Release"
+    name: 🚀 Release
     runs-on: ubuntu-latest
     steps:
-    - name: "📥 Check-out"
+    - name: 📥 Check-out
       uses: actions/checkout@v4
-    - name: "🏷️ Get version tag"
+    - name: 🏷️ Get version tag
       id: get-version
       run: echo ::set-output name=tag::${GITHUB_REF/refs\/tags\//}
-    - name: "✏️ Generate changelog"
+    - name: ✏️ Generate changelog
       id: generate-changelog
       if: runner.os == 'Linux'
       uses: heinrichreimer/action-github-changelog-generator@v2
       with:
-        onlyLastTag: "true"
-        stripHeaders: "true"
-        stripGeneratorNotice: "true"
-    - name: "📤 Upload changelog"
+        onlyLastTag: true
+        stripHeaders: true
+        stripGeneratorNotice: true
+    - name: 📤 Upload changelog
       uses: actions/upload-artifact@v4
       with:
-        name: "Changelog"
+        name: Changelog
         path: CHANGELOG.md
-    - name: "🚀 Create GitHub release"
+    - name: 🚀 Create GitHub release
       id: create-github-release
       uses: actions/create-release@v1
       env:
@@ -42,22 +42,24 @@ jobs:
         body: ${{ steps.generate-changelog.outputs.changelog }}
         prerelease: false
   publish-plugin:
-    name: "🚀 Publish plugin"
+    name: 🚀 Publish plugin
     runs-on: ubuntu-latest
     steps:
-    - name: "📥 Check-out"
+    - name: 📥 Check-out
       uses: actions/checkout@v4
-    - name: "🧰 Set up JDK 1.8"
+    - name: 🧰 Install JDK
       uses: actions/setup-java@v4
       with:
-        java-version: 1.8
-    - name: "💪 Grant execute permission for gradlew"
-      run: "chmod +x gradlew"
-    - name: "💪 Set Gradle Plugin Plugin portal credentials"
+        java-version: 17
+        distribution: temurin
+        cache: gradle
+    - name: 💪 Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: 💪 Set Gradle Plugin Plugin portal credentials
       run: |
         mkdir -p ~/.gradle
         touch ~/.gradle/gradle.properties
         echo gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} >> ~/.gradle/gradle.properties
         echo gradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} >> ~/.gradle/gradle.properties
-    - name: "🚀 Publish with Gradle"
-      run: "./gradlew publishPlugins"
+    - name: 🚀 Publish with Gradle
+      run: ./gradlew publishPlugins
