--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on: push
 
 jobs:
-  build:
+  gradle-build:
     name: 🏗️ Gradle build
     runs-on: ubuntu-latest
     steps:
@@ -12,15 +12,12 @@ jobs:
       - name: 🧰 Install JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '1.8'
+          java-version: 8
           distribution: temurin
           cache: gradle
-      - name: 💪 Grant execute permission for gradlew
-        run: chmod +x gradlew
       - name: 🏗️ Build with Gradle
         run: ./gradlew build
-  test:
-    needs: build
+  gradle-test:
     name: ✅ Gradle test
     runs-on: ubuntu-latest
     steps:
@@ -29,10 +26,52 @@ jobs:
       - name: 🧰 Install JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '1.8'
+          java-version: 8
           distribution: temurin
           cache: gradle
-      - name: 💪 Grant execute permission for gradlew
-        run: chmod +x gradlew
       - name: ✅ Test with Gradle
         run: ./gradlew test
+  github-release:
+    name: 🚀 Create GitHub release
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs:
+      - gradle-build
+      - gradle-test
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📥 Check-out
+        uses: actions/checkout@v3
+      - name: 🚀 Create GitHub release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: Release ${{ github.ref_name }}
+          fail_on_unmatched_files: true
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+  publish-plugin:
+    name: 🚀 Publish plugin
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs:
+      - gradle-build
+      - gradle-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📥 Check-out
+        uses: actions/checkout@v4
+      - name: 🧰 Install JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: 8
+          distribution: temurin
+          cache: gradle
+      - name: 💪 Set Gradle Plugin Plugin portal credentials
+        run: |
+          mkdir -p ~/.gradle
+          touch ~/.gradle/gradle.properties
+          echo gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} >> ~/.gradle/gradle.properties
+          echo gradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} >> ~/.gradle/gradle.properties
+      - name: 🚀 Publish with Gradle
+        run: ./gradlew publishPlugins
